--- a/.github/workflows/React.yml
+++ b/.github/workflows/React.yml
@@ -21,18 +21,23 @@ jobs:
     steps:
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
+    
     - name: install Nodejs
       uses: actions/setup-node@v2-beta
       with:
        node-version: 12
+    
     - name: install yarn
       uses: borales/actions-yarn@v2.0.0
       with:
        cmd: install # will run `yarn install` command
-    - name: React App Deploy
+ 
+    - name: Build React App
       run: yarn Build
+    
     - name: install Surge
       run: npm install --global surge  
+    
     - name: Deploy to Surge 
       run: surge ./build project001.surge.sh --token $ {{ secrets.SURGE_TOKEN}}
         
