--- a/.github/workflows/React.yml
+++ b/.github/workflows/React.yml
@@ -33,7 +33,7 @@ jobs:
        cmd: install # will run `yarn install` command
  
     - name: Build React App
-      run: yarn Build
+      run: yarn build
     
     - name: install Surge
       run: npm install --global surge  
